# winetricks-zh

./: CHANGELOG  CMakeLists.txt  Changelog  Changlog  CmakeLists.txt  README.md  changlog  winetricks  winetricks-zh  winetricks-zh.desktop
verb/: 163mail.verb  163music.verb  QQGame.verb  THS.verb  TM2013P1.verb  TM2013P2.verb  aliww.verb  dzh365.verb  evernote.verb  flush.verb  foxit.verb  iciba.verb  iqiyi.verb  kugou.verb  line.verb  meitu.verb  neoimaging.verb  qq.verb  qqeim.verb  qqintl.verb  qqlight.verb  qqmusic.verb  rtx.verb  thunder.verb  tim.verb  wechat.verb  youdaonote.verb  youku.verb
